manifests/argo-cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  # annotations:
  #   ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
      host: acme.com
